--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html, body {
     width: 100%;
     height: 100%;
     color: var(--main-grey);
+    background:#171717;
     scroll-behavior: smooth;
 }
 
@@ -245,6 +246,14 @@ header > div.system .third {
   animation: third-rot 15s infinite linear;
 }
 
+header > img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 200px;
+  margin: auto;
+}
+
 /* NAVIGATION STYLE */
 
 nav {
@@ -255,6 +264,10 @@ nav {
   z-index: 100;
   height: 100%;
   background: #181818;
+}
+
+nav img {
+  width: 40px;
 }
 
 nav ul {
@@ -308,6 +321,13 @@ nav > .social {
   align-items: center;
 }
 
+nav > a {
+  position: absolute;
+  width: 40px;
+  padding: 10px;
+  margin:0;
+}
+
 nav li:hover {color: var(--main-orange)} nav li.hover {color: var(--main-orange)}
 
 /* Section Styles */
@@ -329,24 +349,13 @@ main > section > div > h2 {
 
 /* Achievements Styles */
 
-#achievements::before {
-  content: ' ';
-  width: 77%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: #FCF7DE;
-  z-index: -1;
-}
-
 #achievements > div > div {
   margin-top: 50px;
   justify-content: flex-start;
 }
 
 #achievements .card {
-  background: #FFDFBA;
+  background: #1E1E1E;
   display: flex;
   height: 250px;
   align-items: flex-end;
@@ -359,8 +368,9 @@ main > section > div > h2 {
 #achievements .card img {
   position: absolute;
   bottom: 0;
-  right: -50px;
+  right: -10px;
   width: 240px;
+  background-blend-mode: screen;
 }
 
 #achievements .card:last-of-type {
@@ -379,7 +389,7 @@ main > section > div > h2 {
 }
 
 #achievements .card > div {
-  background: rgba(255, 223, 186, 0.7);
+  background: rgba(30, 30, 30, 0.7);
   z-index: 2;
   width: 100%;
 }
@@ -390,21 +400,14 @@ main > section > div > h2 {
 
 /* About Me */
 
-#aboutme::before {
-  content: ' ';
-  width: 77%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background: #DEF3FD;
-  z-index: -1;
-}
-
 #aboutme > div > div {
   padding: 25px;
   border: 1px solid #555;
   margin: 50px 0;
+}
+
+#aboutme > div a {
+  color: var(--main-orange);
 }
 
 #aboutme > div > div * {
@@ -423,4 +426,64 @@ main > section > div > h2 {
   text-align: center;
   margin: 0;
   line-height: 2.2;
+  background: #1E1E1E;
+}
+
+/* PROJECT STYLE */
+
+#projects .content {
+  text-align: center;
+  position: relative;
+  padding: 20px 0;
+  transition: 0.3s ease;
+  color: var(--main-grey);
+  margin: 200px auto;
+  text-align: left;
+  align-items: center;
+}
+
+#projects .content > div {
+  background:#171717;
+  max-width: 400px;
+  align-items: center;
+  padding: 20px 0;
+}
+
+#projects .content > div h3 {
+  font-size: 42px;
+  margin:0;
+  margin-bottom: 10px;
+}
+
+#projects .content > div p {
+  margin-top: 0;
+}
+
+#projects .content img {
+  width: 400px;
+  margin-left: 50px;
+}
+
+#projects .content:before {
+  content:' ';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 400px;
+  height: 300px;
+  margin: auto;
+  border: 5px solid var(--main-green);
+  z-index: -1;
+  transition: 0.3s ease;
+}
+
+#projects .yellow:before {
+  border: 5px solid var(--main-yellow);
+}
+
+#projects .content:hover::before {
+  max-width: 500px;
+  height: 350px;
 }
