--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,9 @@ header > div.head-text h2 {
     right: 0;
     margin: auto;
   }
+  header > div.head-text h1 {
+    font-size: 72px;
+  }
 }
 
 @media only screen and (max-width: 520px) {
