--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,15 @@ main > section > div > h2 {
   margin: 10px;
 }
 
+@media only screen and (max-width: 876px) {
+  #achievements .card {
+      margin: 25px 0;
+  }
+  #achievements .card:last-of-type {
+    margin: 25px 0;
+  }
+}
+
 /* About Me */
 
 #aboutme > div > div {
@@ -587,6 +596,7 @@ main > section > div > h2 {
   }
   #projects .content:hover::before {
     background: var(--main-orange);
+    height: 300px;
   }
   #projects .content.yellow:hover::before {
     background: var(--main-yellow);
